<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">


    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.anuragjewellery.fragment.ProfileFragment"
        android:label="@string/nav_profle"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_registration"
        android:name="com.example.anuragjewellery.fragment.RegistrationFragment"
        android:label="@string/nav_registration"
        tools:layout="@layout/fragment_registration" />

    <fragment
        android:id="@+id/nav_new_party"
        android:name="com.example.anuragjewellery.fragment.NewPartyFragment"
        android:label="@string/nav_new_party"
        tools:layout="@layout/fragment_new_party" />

    <fragment
        android:id="@+id/nav_new_salesentry"
        android:name="com.example.anuragjewellery.fragment.NewSalesEntryFragment"
        android:label="@string/nav_new_salesentry"
        tools:layout="@layout/fragment_new_sales_entry" />


</navigation>