<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="#f0f0f0"
    tools:context=".admin.SalesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/salesman_btnfromdate"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_width="@dimen/_115sdp"
                    android:background="@android:color/white"
                    android:text="@string/txt_from"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <TextView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="TO"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_11sdp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/salesman_btntodate"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_width="@dimen/_115sdp"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:background="@android:color/white"
                    android:text="@string/txt_to"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/txt_credit"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/salesman_credit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#051416"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/white">
            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/txt_debit"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/salesman_debit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/white">
            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/txt_balance"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/salesman_balance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <SearchView
        android:id="@+id/search_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="Search Salesman"
        >
        <requestFocus />
    </SearchView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/anurag_salesman_select_dealer_or_not"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/anurag_salesman_sr.no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sales_sr_no"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/_minus11sdp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        />

                    <TextView
                        android:id="@+id/anurag_salesman_owner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sales_salesman"
                        android:layout_marginStart="@dimen/_minus10sdp"
                        android:layout_marginEnd="@dimen/_minus10sdp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        />
                    <TextView
                        android:id="@+id/anurag_salesman_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sales_credit"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_minus1sdp"
                        android:layout_marginEnd="@dimen/_minus15sdp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        />

                    <TextView
                        android:id="@+id/anurag_salesman_touch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sales_debit"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/_minus5sdp"
                        android:layout_marginEnd="@dimen/_1sdp"
                        android:layout_gravity="center|right"
                        android:gravity="center|right"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"/>

                    <TextView
                        android:id="@+id/anurag_salesman_payment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sales_payment"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/_minus5sdp"
                        android:layout_marginEnd="@dimen/_1sdp"
                        android:layout_gravity="center|right"
                        android:gravity="center|right"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp" />

                </LinearLayout>

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/Pulltorefresh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/anurag_salesman_pay"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/_1sdp"
                        android:elevation="@dimen/_4sdp">

                    </androidx.recyclerview.widget.RecyclerView>
                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>